k8s/apps/couchdb/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian-sync
  labels:
    app: couchdb
spec:
  type: ClusterIP
  selector:
    app: couchdb
  ports:
    - port: 5984
      targetPort: 5984
      protocol: TCP
      name: http
